--- a/assets/locale/zh-cn.json
+++ b/assets/locale/zh-cn.json
@@ -1,7 +1,12 @@
 {
     "values":{
         "LV.": "ddd",
-        "Settings":"设置"
+        "Settings":"设置",
+        "VS COMPUTER":"挑战电脑",
+        "ONLINE MULTIPLAYER":"在线多人对战",
+        "PLAY WITH FRIENDS":"挑战好友",
+        "BUDDIES":"好友",
+        "RECENT":"最近"
     }
   }
        
